tests/baselines/reference/metadataOfStringLiteral.errors.txt
metadataOfStringLiteral.ts(5,12): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.


==== metadataOfStringLiteral.ts (1 errors) ====
    function PropDeco(target: Object, propKey: string | symbol) { }
    
    class Foo {
        @PropDeco
        public foo: "foo" | "bar";
               ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }